--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,30 +8,9 @@
 @import url('./reset.css');
 @import url('./base.css');
 
-@font-face {
-  font-family: 'Montserrat';
-  src: url('/fonts/Montserrat-Regular.woff2') format('woff2');
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('/fonts/Montserrat-Medium.woff2') format('woff2');
-  font-weight: 500;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('/fonts/Montserrat-SemiBold.woff2') format('woff2');
-  font-weight: 600;
-  font-style: normal;
-}
-
 body {
-  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .form {
@@ -45,7 +24,7 @@ body {
 }
 
 .search-input {
-  font-family: 'Montserrat', sans-serif;
+  font-family: sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -68,7 +47,7 @@ body {
 }
 
 .search-btn {
-  font-family: 'Montserrat', sans-serif;
+  font-family: sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -215,7 +194,7 @@ body {
 }
 
 .load-more {
-  font-family: 'Montserrat', sans-serif;
+  font-family: sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
